Add clickable side images linking to ecofriendly and workwithus pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,34 +9,18 @@
 
 <body>
 
-  <!-- LOGO + MENU -->
-  <div class="top-left">
-    <img src="logo.png" alt="Cazzual Logo" class="logo" />
-    <div class="dropdown">
-      <a href="founder.html">Founders</a>
-      <a href="others.html">Other Members</a>
-      <a href="terms.html">Terms & Conditions</a>
-    </div>
-  </div>
+  <!-- LEFT CLICKABLE IMAGE -->
+  <a href="ecofriendly.html" class="side-image left">
+    <span>ECO-FRIENDLY</span>
+  </a>
 
-  <!-- HERO SECTION 1 -->
-  <section class="hero hero-one">
-    <div class="hero-text">
-      <h1>We Build Your Ideas</h1>
-      <p>Projects • Models • Websites • Handwritten Work</p>
-    </div>
-  </section>
+  <!-- RIGHT CLICKABLE IMAGE -->
+  <a href="workwithus.html" class="side-image right">
+    <span>WORK WITH US</span>
+  </a>
 
-  <!-- HERO SECTION 2 -->
-  <section class="hero hero-two">
-    <div class="hero-text">
-      <h1>From Concept to Completion</h1>
-      <p>Handled by real people, not bots</p>
-    </div>
-  </section>
-
-  <!-- FORM SECTION -->
-  <section class="form-section">
+  <!-- CENTER FORM -->
+  <main class="form-wrapper">
     <div class="container">
       <h1>Request a Project</h1>
       <p class="subtitle">
@@ -44,12 +28,11 @@
       </p>
 
       <form id="projectForm">
+        <input type="text" placeholder="Your Name" required />
+        <input type="email" placeholder="Your Email" required />
+        <input type="text" placeholder="Project Title" required />
 
-        <input type="text" id="name" placeholder="Your Name" required />
-        <input type="email" id="email" placeholder="Your Email" required />
-        <input type="text" id="title" placeholder="Project Title" required />
-
-        <select id="type" required>
+        <select required>
           <option value="">Select Project Type</option>
           <option>Model Making</option>
           <option>Website / Apps</option>
@@ -59,79 +42,19 @@
         </select>
 
         <textarea
-          id="description"
           placeholder="Project Description (Optional)"
           rows="4"
         ></textarea>
 
-        <input type="date" id="deadline" required />
+        <input type="date" required />
 
-        <button type="submit" id="submitBtn">
-          <span id="btnText">Submit Project</span>
-          <span class="spinner" id="spinner"></span>
-        </button>
+        <button type="submit">Submit Project</button>
 
+        <div id="message"></div>
       </form>
-
-      <div id="message"></div>
     </div>
-  </section>
-
-  <!-- SCRIPT (unchanged logic) -->
-  <script>
-    const form = document.getElementById("projectForm");
-    const messageDiv = document.getElementById("message");
-    const submitBtn = document.getElementById("submitBtn");
-    const btnText = document.getElementById("btnText");
-    const spinner = document.getElementById("spinner");
-
-    const API_URL = "https://project-backend-hybc.onrender.com/api/projects";
-
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      messageDiv.innerHTML = "";
-
-      submitBtn.disabled = true;
-      submitBtn.classList.add("loading");
-      btnText.textContent = "Please wait...";
-      spinner.style.display = "inline-block";
-
-      const data = {
-        name: name.value,
-        email: email.value,
-        title: title.value,
-        type: type.value,
-        description: description.value,
-        deadline: deadline.value
-      };
-
-      try {
-        const res = await fetch(API_URL, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(data)
-        });
-
-        if (res.ok) {
-          messageDiv.innerHTML =
-            "<p class='success'>✅ Project submitted successfully!</p>";
-          form.reset();
-          setTimeout(() => (messageDiv.innerHTML = ""), 2000);
-        } else {
-          messageDiv.innerHTML =
-            "<p class='error'>❌ Something went wrong. Try again.</p>";
-        }
-      } catch {
-        messageDiv.innerHTML =
-          "<p class='error'>❌ Server not reachable.</p>";
-      }
-
-      submitBtn.disabled = false;
-      submitBtn.classList.remove("loading");
-      btnText.textContent = "Submit Project";
-      spinner.style.display = "none";
-    });
-  </script>
+  </main>
 
 </body>
 </html>
+
