--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,13 +9,18 @@
 
 <body>
 
-  <!-- LOGO -->
-  <div class="top-logo">
-  <a href="index.html">
+<!-- LOGO WITH DROPDOWN -->
+<div class="top-logo">
+  <a href="index.html" class="logo-link">
     <img src="logo.png" alt="Cazzual Logo">
   </a>
-</div>
 
+  <div class="logo-dropdown">
+    <a href="founder.html">Founders</a>
+    <a href="others.html">Other Members</a>
+    <a href="terms.html">Terms & Conditions</a>
+  </div>
+</div>
   <!-- HERO 1 -->
   <section class="hero hero1"></section>
 
