--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,16 +60,13 @@
 
 <!-- OPTIONAL STICKER SECTION -->
 <div class="sticker-section">
-  <p class="sticker-title">
-    🎨 Want custom stickers? (Optional)
-  </p>
 
   <button
     type="button"
     class="sticker-btn"
     onclick="window.location.href='sticker.html'"
   >
-    Choose Stickers
+    Choose Stickers (Optional)
   </button>
 
   <p id="stickerPreview" class="sticker-preview"></p>
