--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,12 +58,12 @@
         <input type="date" required />
 
 
-<!-- 🔥 ADD THIS PART HERE 🔥 -->
-  <a href="sticker.html" class="sticker-link">
-    🎁 Select Stickers (Optional)
-  </a>
+<!-- Sticker selection button -->
+<button type="button" id="stickerBtn" class="sticker-btn">
+  🎁 Select Stickers (Optional)
+</button>
 
-  <input type="hidden" id="stickersInput" name="stickers">
+<input type="hidden" id="stickersInput" name="stickers">
 
         <button type="submit">Submit Project</button>
       </form>
